[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/Pause.gd" type="Script" id=1]
[ext_resource path="res://src/Theme.tres" type="Theme" id=2]
[ext_resource path="res://src/Eminent_Hearers.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/Button.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 72
font_data = ExtResource( 3 )

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Conotrol" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Conotrol"]
margin_right = 800.0
margin_bottom = 450.0
color = Color( 0, 0, 0, 0.545098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Conotrol"]
margin_top = 150.0
margin_right = 800.0
margin_bottom = 450.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Conotrol/CenterContainer"]
margin_left = 295.0
margin_top = 65.0
margin_right = 505.0
margin_bottom = 235.0

[node name="Resume" type="Button" parent="Conotrol/CenterContainer/VBoxContainer"]
margin_right = 210.0
margin_bottom = 54.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="Restart" type="Button" parent="Conotrol/CenterContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 210.0
margin_bottom = 112.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="Quit" type="Button" parent="Conotrol/CenterContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 210.0
margin_bottom = 170.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="CenterContainer2" type="CenterContainer" parent="Conotrol"]
margin_right = 800.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Conotrol/CenterContainer2"]
margin_left = 265.0
margin_top = 34.0
margin_right = 535.0
margin_bottom = 115.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 3 )
text = "Paused"

[node name="Label" type="Label" parent="Conotrol/CenterContainer2"]
margin_left = 265.0
margin_top = 34.0
margin_right = 535.0
margin_bottom = 115.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "Paused"

[connection signal="pressed" from="Conotrol/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Conotrol/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Conotrol/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
